service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-web-app-service
spec:
  selector:
    app: my-web-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
